test/testdata/number/divide_by_zero_error.lox
1 / 0; // error: cannot divide by 0
